Cryo Launcher v1.0.18 — Pack Optimizer, crash bisector, per-mod profiler, smart JVM defaults
- Pack Optimizer card: one-click scan + fix (perf mods, ModernFix dynRes,
  RAM, Turbo, Defender) with per-row fixes and "Optimize everything"
- Crash bisector: fully automated binary search for the mod that crashes a
  pack at startup (dependency-closed halves, journaled renames, auto-restore)
- "Slowest mods" launch profiler: per-mod boot cost estimated from debug.log
  thread/timestamp attribution (the only log with the source field)
- Engine JVM fixes: instance.cfg JvmArgs were NEVER applied on engine
  launches — now applied (quote-aware, OverrideJavaArgs honored); Aikar G1
  set + string dedup when no user args; heap auto-sized from mod count +
  system RAM when MaxMemAlloc is unset; Xms = Xmx/2
- Turbo: +UseCompactObjectHeaders (JEP 519) on training/cache runs; flags
  version + user JVM args now part of the cache fingerprint (existing caches
  retrain on purpose)
- Turbo stale cache is opt-in: mods changed -> standard launch + "cache
  outdated / Retrain on next launch" instead of a surprise slow training run;
  benchmark consents automatically; GetTurbo/benchmark fingerprint arg-key
  fixes

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>